# 100-exercises-to-learn-rust

exercises/03_ticket_v1/02_validation/: Cargo.toml
exercises/04_traits/10_assoc_vs_generic/src/: lib.rs
exercises/04_traits/12_copy/src/: lib.rs
exercises/04_traits/13_drop/src/: lib.rs
exercises/04_traits/14_outro/src/: lib.rs
exercises/05_ticket_v2/01_enum/src/: lib.rs
exercises/05_ticket_v2/06_fallibility/src/: lib.rs
exercises/05_ticket_v2/07_unwrap/src/: lib.rs
exercises/05_ticket_v2/08_error_enums/src/: lib.rs
exercises/05_ticket_v2/09_error_trait/src/: lib.rs
exercises/05_ticket_v2/11_dependencies/: Cargo.toml
exercises/05_ticket_v2/12_thiserror/src/: lib.rs
exercises/05_ticket_v2/13_try_from/src/: lib.rs
exercises/05_ticket_v2/14_source/src/: lib.rs  status.rs
exercises/05_ticket_v2/15_outro/src/: description.rs  status.rs  title.rs
exercises/06_ticket_management/01_arrays/src/: lib.rs
exercises/06_ticket_management/02_vec/src/: lib.rs
exercises/06_ticket_management/08_impl_trait/src/: lib.rs
exercises/06_ticket_management/09_impl_trait_2/src/: lib.rs
exercises/06_ticket_management/11_mutable_slices/src/: lib.rs
exercises/06_ticket_management/12_two_states/src/: lib.rs  test.html
exercises/06_ticket_management/13_index/src/: lib.rs
exercises/06_ticket_management/14_index_mut/src/: lib.rs
exercises/07_threads/01_threads/src/: lib.rs
exercises/07_threads/02_static/src/: lib.rs
exercises/07_threads/03_leak/src/: lib.rs
exercises/07_threads/04_scoped_threads/src/: lib.rs
