[package]
name = "validation"
version = "0.1.0"
edition = "2021"

[dependencies]
once_cell = "1.17.1"

[dev-dependencies]
common = { path = "../../../helpers/common" }

[lints.rust]
# We silence dead code warnings for the time being in order to reduce
# compiler noise.
# We'll re-enable them again once we explain how visibility works in Rust.
dead_code = "allow"
